--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
     font-family: 'Open Sans', sans-serif;
+    
 }
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lobster&family=Open+Sans:wght@400;500;600;700;800&display=swap');
 /* header style */
 .header{
     background:linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(../images/donation5.jpg);
@@ -192,22 +195,54 @@ color: #707070;
     height: 200px;
     background: #FFF4D6;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 5px;
 }
-.contact input{
-    font-size: 18px;
+/* label{
+    position: relative;
+} */
+.contact .input-email{
+    font-size: 20px;
     padding: 15px 10px;
     border: none;
     outline: none;
-    background: #fff;
+    background: rgb(141, 139, 139);
+    border-radius: 5px 0px 0px 5px;
+    position: relative;
 }
-.contact button{
-    padding: 15px 20px;
+.contact .input-email::placeholder{
+    color: rgb(71, 69, 69);
+}
+.contact .btn-primary-submit{
+    padding: 15px 30px;
     font-size: 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: .3s;
+    position: absolute;
+    border-radius:0px 5px 5px 0px;
+
 }
+
+/* footer section style */
+.footer{
+   background: #0B0D17;
+}
+.footer-section{
+    text-align: center;
+    padding-bottom:50px ;
+}
+.footer-title{
+    font-weight: 700;
+font-size: 36px;
+color: #FF5959;
+margin-top: 50px;
+margin-bottom: 15px;
+padding-top: 50px;
+}
+
 
