--- a/styles/style.css
+++ b/styles/style.css
@@ -1,248 +1,290 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    
-}
-/* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lobster&family=Open+Sans:wght@400;500;600;700;800&display=swap');
-/* header style */
-.header{
-    background:linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(../images/donation5.jpg);
-    background-repeat: no-repeat;
-    align-items: center;
-    position: relative;
-    background-size: cover;
-    justify-content: center;
-    height: 100vh;
-    display: flex;
-}
-.header-detales{
-    width: 850px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-.header-title{
-    font-weight: 700;
-    font-size: 65px;
-    text-align: center;
-    color: #FFFFFF;
+/* header style */
+.header {
+  background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.5) 50%,
+      rgba(0, 0, 0, 0.5) 50%
+    ),
+    url(../images/donation5.jpg);
+  background-repeat: no-repeat;
+  align-items: center;
+  position: relative;
+  background-size: cover;
+  justify-content: center;
+  height: 100vh;
+  display: flex;
 }
-.description{
-    font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-text-align: center;
-margin-top: 30px;
-color: #FFFFFF;
+.header-detales {
+  width: 850px;
 }
-.btn-primary{
-    color:#fff;
-    background: #FF5959;
-    border-radius: 5px;
-    border: none;
-    padding: 16px 12px;
-    font-weight: 600;
-    font-size: 20px;
-    align-items: center;
-    cursor: pointer;
+
+.header-title {
+  font-weight: 700;
+  font-size: 65px;
+  text-align: center;
+  color: #ffffff;
 }
-.btn-secondary{
-    text-align: center;
-    margin-top: 30px;
+.description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  margin-top: 30px;
+  color: #ffffff;
+}
+.btn-primary {
+  color: #fff;
+  background: #ff5959;
+  border-radius: 5px;
+  border: none;
+  padding: 16px 12px;
+  font-weight: 600;
+  font-size: 20px;
+  align-items: center;
+  cursor: pointer;
+}
+.btn-secondary {
+  text-align: center;
+  margin-top: 30px;
 }
 
 /* donate today style */
-.donate{
-    max-width: 800px;
-    margin: 0 auto;
+.donate {
+  max-width: 800px;
+  margin: 0 auto;
 }
-.donate-title{
-    margin-top: 100px;
-    font-weight: 700;
-font-size: 45px;
-line-height: 54px;
-text-align: center;
-color: #121212;
-margin-bottom: 30px;
+.donate-title {
+  margin-top: 100px;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 54px;
+  text-align: center;
+  color: #121212;
+  margin-bottom: 30px;
 }
-.donate-price{
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    gap: 22px;
-    
+.donate-price {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  gap: 22px;
 }
-.donate-description{
-    color: #707070;
-    font-weight: 400;
-    font-size: 18px;
-    text-align: center;
-
+.donate-description {
+  color: #707070;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
 }
-.donate-price .taka{
-    width: 136px;
-    height: 123px;
-    background: #FAFAFA;
-    border-radius: 5px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.donate-price .taka {
+  width: 136px;
+  height: 123px;
+  background: #fafafa;
+  border-radius: 5px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#taka-change{
-    background: #FFEEEE;
-border: 2px solid #FF5959;
+#taka-change {
+  background: #ffeeee;
+  border: 2px solid #ff5959;
 }
-#taka-change h3{
-    color:#FF5959;
+#taka-change h3 {
+  color: #ff5959;
 }
-.donate-price .taka h4{
-    color: #707070;
-    font-weight: 700;
-    font-size: 30px;
-    padding: 5px;
+.donate-price .taka h4 {
+  color: #707070;
+  font-weight: 700;
+  font-size: 30px;
+  padding: 5px;
 }
-hr{
-    margin-top: 15px;
+hr {
+  margin-top: 15px;
 }
 
 /* section */
-.section{
-    max-width: 1140px;
-    margin: 0 auto;
+.section {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 /* donate plan style */
-#descriptionId{
-    max-width: 800px;
-    margin: 0 auto;
+#descriptionId {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-.donate-box{
-    display: flex;
-    gap: 24px;
-    margin-top: 50px;
-    margin-bottom: 150px;
+.donate-box {
+  display: flex;
+  gap: 24px;
+  margin-top: 50px;
+  margin-bottom: 150px;
 }
 
-.donate-box .donate-plan-box{
-    background: rgba(79, 157, 166, 0.1);
-    border-radius: 5px;
-    width: 350px;
-    height: 330px;
-    padding: 25px;
+.donate-box .donate-plan-box {
+  background: rgba(79, 157, 166, 0.1);
+  border-radius: 5px;
+  width: 350px;
+  height: 330px;
+  padding: 25px;
 }
-.donate-box .donate-plan-box img{
-    margin-top: 40px;
-    margin-bottom: 25px;
+.donate-box .donate-plan-box img {
+  margin-top: 40px;
+  margin-bottom: 25px;
 }
-.donate-box .donate-plan-box h4{
-    color: #121212;
-    font-weight: 600;
-font-size: 24px;
-margin-bottom: 25px;
+.donate-box .donate-plan-box h4 {
+  color: #121212;
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 25px;
 }
-.donate-box .donate-plan-box p{
-    font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-color: #707070;
+.donate-box .donate-plan-box p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #707070;
 }
 
 /* live donate style */
-.live-donate{
-    display: flex;
-    gap: 83px;
-    margin-bottom: 100px;
+.live-donate {
+  display: flex;
+  gap: 83px;
+  margin-bottom: 100px;
 }
-.donate-item{
-    width: 480px;
+.donate-item {
+  width: 480px;
 }
 
-.live-donate-img img{
-    width: 450px;
-    height: 477px;
-    object-fit: cover;
-    border-radius: 5px;
-
+.live-donate-img img {
+  width: 450px;
+  height: 477px;
+  object-fit: cover;
+  border-radius: 5px;
 }
-.donate-title-live{
-    margin-top: 100px;
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 54px;
-    color: #121212;
-    margin-bottom: 20px;
+.donate-title-live {
+  margin-top: 100px;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 54px;
+  color: #121212;
+  margin-bottom: 20px;
 }
-.donate-live-description{
-    color: #707070;
-    font-weight: 400;
-    font-size: 18px;
+.donate-live-description {
+  color: #707070;
+  font-weight: 400;
+  font-size: 18px;
 }
-.donate-live-description1{
-    color: #707070;
-    font-weight: 400;
-    font-size: 18px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+.donate-live-description1 {
+  color: #707070;
+  font-weight: 400;
+  font-size: 18px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 /* contact style */
-.contact{
-    height: 200px;
-    background: #FFF4D6;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    border-radius: 5px;
+.contact {
+  height: 200px;
+  background: #fff4d6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 5px;
 }
-/* label{
-    position: relative;
-} */
-.contact .input-email{
-    font-size: 20px;
-    padding: 15px 10px;
-    border: none;
-    outline: none;
-    background: rgb(141, 139, 139);
-    border-radius: 5px 0px 0px 5px;
-    position: relative;
+.contact .input-email {
+  font-size: 20px;
+  padding: 15px 10px;
+  border: none;
+  outline: none;
+  background: rgb(141, 139, 139);
+  border-radius: 5px 0px 0px 5px;
 }
-.contact .input-email::placeholder{
-    color: rgb(71, 69, 69);
+.contact .input-email::placeholder {
+  color: rgb(71, 69, 69);
 }
-.contact .btn-primary-submit{
-    padding: 15px 30px;
-    font-size: 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    border-radius:0px 5px 5px 0px;
-
+.contact .btn-primary-submit {
+  padding: 15px 30px;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #ff5959;
+  color: #ffffff;
+  border-radius: 0px 5px 5px 0px;
 }
 
 /* footer section style */
-.footer{
-   background: #0B0D17;
+.footer {
+  background: #0b0d17;
 }
-.footer-section{
-    text-align: center;
-    padding-bottom:50px ;
+.footer-section {
+  text-align: center;
+  padding-bottom: 50px;
 }
-.footer-title{
-    font-weight: 700;
-font-size: 36px;
-color: #FF5959;
-margin-top: 50px;
-margin-bottom: 15px;
-padding-top: 50px;
+.footer-title {
+  font-weight: 700;
+  font-size: 36px;
+  color: #ff5959;
+  margin-top: 50px;
+  margin-bottom: 15px;
+  padding-top: 50px;
+ 
 }
+.footer-section .footer-title{
+    font-family: 'Lobster', cursive!important;
+} 
 
 
+
+
+
+/* try new thing */
+/* .email-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.email-container{
+    display: flex;
+    padding:100px 150px;
+    background: #fff4d6;
+    border-radius: 5px;
+}
+.email-container .input{
+    height: 65px;
+    width: 290px;
+    background-color: #707070;
+    border:0;
+    border-radius: 5px 0 0 5px;
+    color: rgb(71, 69, 69);
+    outline: none;
+    color:#ffff;
+    padding-left: 20px;
+    font-size: 20px;
+
+}
+.email-container .input::placeholder{
+    color: rgb(71, 69, 69);
+    font-size: 20px;
+    padding-left: 20px;
+}
+.email-container .s-btn{
+    width: 190px;
+    background:#ff5959;
+    border:0;
+    outline: none;
+    border-radius: 0px 5px 5px 0;
+    font-size: 20px;
+}
+*/
